# argentum_user/rest/src/dto/schema/mod.rs
@@ -1,6 +1,7 @@
 mod problem_detail;
 mod user;
 mod user_name;
+mod violation;
 
 pub use problem_detail::ProblemDetail;
 pub use problem_detail::ProblemDetailRaw;
@@ -8,3 +9,5 @@ pub use user::User;
 pub use user::UserRaw;
 pub use user_name::UserName;
 pub use user_name::UserNameRaw;
+pub use violation::Violation;
+pub use violation::ViolationRaw;
