# argentum_user_account/rest/src/dto/schema/mod.rs
@@ -8,6 +8,7 @@ mod registration_with_password_result;
 mod registration_with_password_schema;
 mod request_restore_token_schema;
 mod user_name;
+mod violation;
 
 pub use anonymous_registration_result::AnonymousRegistrationResult;
 pub use anonymous_registration_result::AnonymousRegistrationResultRaw;
@@ -29,3 +30,5 @@ pub use request_restore_token_schema::RequestRestoreTokenSchema;
 pub use request_restore_token_schema::RequestRestoreTokenSchemaRaw;
 pub use user_name::UserName;
 pub use user_name::UserNameRaw;
+pub use violation::Violation;
+pub use violation::ViolationRaw;
