# argentum_user_account/rest/src/dto/schema/violation.rs
@@ -1,0 +1,50 @@
+use argentum_rest_infrastructure::data_type::DeserializableSchemaRaw;
+use argentum_rest_infrastructure::data_type::SerializableBody;
+use argentum_standard_business::invariant_violation::{
+    InvariantResult, ViolationItem, ViolationObject, Violations,
+};
+use std::collections::BTreeMap;
+use std::collections::HashMap;
+
+#[derive(Debug, Clone, PartialEq, serde::Serialize, serde::Deserialize)]
+pub struct Violation {
+    pub errors: Option<Vec<String>>,
+
+    pub items: Option<HashMap<String, Violation>>,
+}
+
+impl Violation {
+    pub fn new(errors: Option<Vec<String>>, items: Option<HashMap<String, Violation>>) -> Self {
+        Self { errors, items }
+    }
+}
+
+impl SerializableBody for Violation {}
+
+impl DeserializableSchemaRaw<'_> for Violation {
+    type Raw = ViolationRaw;
+
+    fn try_from_raw(raw: Self::Raw) -> InvariantResult<Self> {
+        let mut argentum_violations: ViolationObject = BTreeMap::new();
+
+        let errors = raw.errors;
+        let items = raw.items;
+
+        if argentum_violations.is_empty() {
+            Ok(Self::new(errors, items))
+        } else {
+            Err(Violations::new(
+                vec!["wrong data for Violation".to_string()],
+                Some(ViolationItem::Object(argentum_violations)),
+            ))
+        }
+    }
+}
+
+#[derive(serde::Deserialize)]
+pub struct ViolationRaw {
+    #[serde(rename = "errors")]
+    pub errors: Option<Vec<String>>,
+    #[serde(rename = "items")]
+    pub items: Option<HashMap<String, Violation>>,
+}
